renamed string res names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="text_connectivity">Back Online</string>
     <string name="text_post_header">Post Header</string>
     <string name="exit_dialog_message">Are you sure want to exit?</string>
-    <string name="yes">Yes</string>
     <string name="exit_dialog_title">Exit?</string>
-    <string name="no">No</string>
+    <string name="option_yes">Yes</string>
+    <string name="option_no">No</string>
 </resources>
