adds share application to main screen and share title and the body of the detailes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="exit_dialog_title">Exit?</string>
     <string name="option_yes">Yes</string>
     <string name="option_no">No</string>
+    <string name="share_application">Share Application</string>
+    <string name="dark_theme">Dark Mode</string>
 </resources>
